# switchcraft

./: .gitignore  ARCHITECTURE.md  README.md  build.sh  com.github.switchcraft.Switchcraft.desktop.in  com.github.switchcraft.Switchcraft.metainfo.xml.in  commands.json  io.github.switchcraft.Switchcraft.desktop  io.github.switchcraft.Switchcraft.desktop.in  io.github.switchcraft.Switchcraft.metainfo.xml  io.github.switchcraft.Switchcraft.metainfo.xml.in  meson.build  meson_options.txt  packit.sh  switchcraft-monitor.desktop.in  switchcraft-monitor.sh  switchcraft.desktop
.github/: FUNDING.yml  copilot-instructions.md  github-stats.sh
.github/workflows/: package.yml
data/: com.github.switchcraft.Switchcraft.desktop.in  com.github.switchcraft.Switchcraft.gschema.xml  gschemas.compiled
data/resources/: switchcraft.gresource.xml
packaging/scripts/: after-remove.sh  packit.sh
scripts/: check-latest-downloads.sh
src/: Application.vala  Config.vala.in  ConstantsWindow.vala  MainWindow.vala  PreferencesWindow.vala  ThemeMonitor.vala  main.vala  switchcraft.gresource.xml
switchcraft/: __init__.py  application.py  constants_window.py  main.py  monitor.py  window.py
